--- a/gridot/GriDot/Base.lproj/Main.storyboard
+++ b/gridot/GriDot/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3d7-DP-MlN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3d7-DP-MlN">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -1655,7 +1655,7 @@
                                                                 <imageReference key="image" image="rectangle.and.pencil.and.ellipsis" catalog="system" symbolScale="large"/>
                                                                 <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" weight="bold"/>
                                                                 <color key="baseForegroundColor" name="Icon"/>
-                                                                <color key="baseBackgroundColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <color key="baseBackgroundColor" name="Color3"/>
                                                             </buttonConfiguration>
                                                             <connections>
                                                                 <action selector="tappedEditBtn:" destination="uB9-9q-fV6" eventType="touchUpInside" id="PkB-5F-qRx"/>
@@ -1670,7 +1670,7 @@
                                                             <state key="normal" title="Button"/>
                                                             <buttonConfiguration key="configuration" style="filled" image="trash.fill" catalog="system" cornerStyle="medium">
                                                                 <color key="baseForegroundColor" name="Icon"/>
-                                                                <color key="baseBackgroundColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <color key="baseBackgroundColor" name="Color3"/>
                                                             </buttonConfiguration>
                                                             <connections>
                                                                 <action selector="tappedRemoveBtn:" destination="uB9-9q-fV6" eventType="touchUpInside" id="Iqi-Cd-f49"/>
@@ -1685,7 +1685,7 @@
                                                             <state key="normal" title="Button"/>
                                                             <buttonConfiguration key="configuration" style="filled" image="square.and.arrow.up.fill" catalog="system" cornerStyle="medium">
                                                                 <color key="baseForegroundColor" name="Icon"/>
-                                                                <color key="baseBackgroundColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <color key="baseBackgroundColor" name="Color3"/>
                                                             </buttonConfiguration>
                                                             <connections>
                                                                 <action selector="tappedExportBtn:" destination="uB9-9q-fV6" eventType="touchUpInside" id="Mta-mZ-gkV"/>
@@ -1700,14 +1700,14 @@
                                                             <state key="normal" title="Button"/>
                                                             <buttonConfiguration key="configuration" style="filled" image="doc.on.doc.fill" catalog="system" cornerStyle="medium">
                                                                 <color key="baseForegroundColor" name="Icon"/>
-                                                                <color key="baseBackgroundColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <color key="baseBackgroundColor" name="Color3"/>
                                                             </buttonConfiguration>
                                                             <connections>
                                                                 <action selector="tappedCopyBtn:" destination="uB9-9q-fV6" eventType="touchUpInside" id="lZb-Gg-f3C"/>
                                                             </connections>
                                                         </button>
                                                     </subviews>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="backgroundColor" name="Color3"/>
                                                     <constraints>
                                                         <constraint firstItem="6hJ-uM-H6H" firstAttribute="width" secondItem="3Mu-y3-A3R" secondAttribute="width" multiplier="0.4" id="0bl-6h-PBg"/>
                                                         <constraint firstItem="D9Z-Eh-1fF" firstAttribute="trailing" secondItem="3Mu-y3-A3R" secondAttribute="centerX" constant="-5" id="5dV-AB-tWr"/>
@@ -1992,16 +1992,16 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tintColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
